added myPetList route
